nullaway_error_81a02e99-237b-4b80-8637-5f83821f42cf.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:474: error: [NullAway] dereferenced expression this.miscEntities.get(renderType) is @Nullable
      this.miscEntities.get(renderType).clear();
                                       ^
    (see http://t.uber.com/nullaway )
